# lidarObstacleDetect

./: .clang-format  CMakeLists.txt  README.md  cost_time_analysis.py  package.xml  patchworkpp_euclidean.txt  patchworkpp_euclidean_summary.xlsx
config/: lidar_obstacle_detection.yaml
lib/bounding_box/: bounding_box.cpp  bounding_box.h
lib/euclidean_cluster/: euclidean_cluster.cpp  euclidean_cluster.h
lib/ground_detector/patchwork/: patchwork.cpp
lib/ground_detector/patchworkpp/: patchworkpp.cpp
lib/pre_process/roi_clip/: roi_clip.h
lib/pre_process/voxel_grid_filter/: voxel_grid_filter.cpp  voxel_grid_filter.h
lib/visualization/: visualize_detected_objects.cpp  visualize_detected_objects.h
main/: lidar_obstacle_detection.cpp  lidar_obstacle_detection.h  lidar_obstacle_detection_node.cpp  main.cpp
modules/bounding_box/: CMakeLists.txt  bounding_box.cpp  bounding_box.h
modules/euclidean_cluster/: CMakeLists.txt  euclidean_cluster.cpp  euclidean_cluster.h
modules/ground_detector/newpatchwork/: new_patchwork.hpp
modules/ground_detector/patchwork/: patchwork.cpp  patchwork.h
modules/ground_detector/patchworkpp/: CMakeLists.txt  patchworkpp.cpp  patchworkpp.h  patchworkpp.hpp
modules/pre_process/roi_clip/: CMakeLists.txt  roi_clip.cpp  roi_clip.h
modules/pre_process/voxel_grid_filter/: CMakeLists.txt  voxel_grid_filter.cpp  voxel_grid_filter.h
modules/visualization/: CMakeLists.txt  visualize_detected_objects.cpp  visualize_detected_objects.h
rviz/: lidar_obstacle_detection.rviz
src/: lidar_obstacle_detection.cpp  lidar_obstacle_detection.h
