<?xml version="1.0"?>
<package format="3">
  <name>lidar_obstacle_detection</name>
  <version>0.0.0</version>
  <description>The lidar_obstacle_detection package</description>

  <maintainer email="xiaohu@todo.todo">xiaohu</maintainer>

  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS2 and system dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>autoware_auto_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Export information -->
  <export>
    <!-- Allow this package to be built as ament_cmake package -->
    <build_type>ament_cmake</build_type>
  </export>
</package>